管理科学与工程-赵亚楠-1605210020

--- a/管理科学与工程-赵亚楠- 1605210020.md
+++ b/管理科学与工程-赵亚楠- 1605210020.md
@@ -1,33 +1,34 @@
-#人工智能为什么能火起来
+人工智能为什么能火起来
 
-##1 人工智能简介
+1 人工智能简介
      
 “人工智能”一词最初是在1956 年Dartmouth学会上提出的。从那以后，研究者们发展了众多理论和原理，人工智能的概念也随之扩展。人工智能（Artificial Intelligence），英文缩写为AI。它是研究、开发用于模拟、延伸和扩展人的智能的理论、方法、技术及应用系统的一门新的技术科学。人工智能是计算机科学的一个分支，它企图了解智能的实质，并生产出一种新的能以人类智能相似的方式做出反应的智能机器，该领域的研究包括机器人、语言识别、图像识别、自然语言处理和专家系统等。人工智能从诞生以来，理论和技术日益成熟，应用领域也不断扩大，可以设想，未来人工智能带来的科技产品，将会是人类智慧的“容器”。 人工智能是对人的意识、思维的信息过程的模拟。人工智能不是人的智能，但能像人那样思考、也可能超过人的智能。 
 
-##2 人工智能火起来的原因 
+2 人工智能火起来的原因 
 
-###（一）人工智能涉及学科广
+（一）人工智能涉及学科广
 人工智能是一门边沿学科，属于自然科学、社会科学、技术科学三向交叉学科。涉及哲学、认知科学、数学、神经生理学、心理学、计算机科学、信息论，控制论，不定性论，仿生学，社会结构学与科学发展观。
 
-###（二）人工智能研究范畴广
+（二）人工智能研究范畴广
 人工智能的研究范畴包括语言的学习与处理，知识表现，智能搜索，推理，规划，机器学习，知识获取，组合调度问题，感知问题，模式识别，逻辑程序设计，软计算，不精确和不确定的管理，人工生命，神经网络，复杂系统，遗传算法人类思维方式，最关键的难题还是机器的自主创造性思维能力的塑造与提升。 
 
-###（三）人工智能可应用领域广
+（三）人工智能可应用领域广
 人工智能的应用领域包括机器翻译，智能控制，专家系统，机器人学，语言和图像理解，遗传编程机器人工厂，自动程序设计，航天应用，庞大的信息处理，储存与管理，执行化合生命体无法执行的或复杂或规模庞大的任务等等。 
 
-###（四）人工智能的影响大 
+（四）人工智能的影响大 
 人工智能对自然科学的影响。在需要使用数学计算机工具解决问题的学科，AI带来的帮助不言而喻。更重要的是，AI反过来有助于人类最终认识自身智能的形成。 
 人工智能对经济的影响。专家系统更深入各行各业，带来巨大的宏观效益。AI也促进了计算机工业网络工业的发展。但同时，也带来了劳务就业问题。由于AI在科技和工程中的应用，能够代替人类进行各种技术工作和脑力劳动，会造成社会结构的剧烈变化。 
 人工智能对社会的影响。AI也为人类文化生活提供了新的模式。现有的游戏将逐步发展为更高智能的交互式文化娱乐手段，今天，游戏中的人工智能应用已经深入到各大游戏制造商的开发中。
 
-###（五）政策支持 
+（五）政策支持 
 2015年5月20日，国务院印发《中国制造2025》，部署全面推进实施制造强国战略。根据规划，通过“三步走”实现制造强国的战略目标，其中第一步，即到2025年迈入制造强国行列。“智能制造”被定位为中国制造的主攻方向。7月5日，国务院印发《“互联网+”行动指导意见》，其中提出，大力发展智能制造：培育发展人工智能新兴产业；推进重点领域智能产品创新；提升终端产品智能化水平。
 
 2016年4月，工信部、国家发改委、财政部联合发布《机器人产业发展规划(2016-2020年)》，为“十三五”期间，我国机器人产业发展描绘了清晰的蓝图。5月23日傍晚，发改委、科技部、工信部和网信办联合印发《“互联网+”人工智能三年行动实施方案》，《方案》表示，到2018年，中国将基本建立人工智能产业体系、创新服务体系和标准化体系，培育若干全球领先的人工智能骨干企业，形成千亿级的人工智能市场应用规模。7月28日，国务院印发《“十三五”国家科技创新规划》，《规划》指出，要大力发展泛在融合、绿色宽带、安全智能的新一代信息技术，研发新一代互联网技术，保障网络空间安全，促进信息技术向各行业广泛渗透与深度融合。9月12日，国务院办公厅印发《费品标准和质量提升规划(2016—2020年)》的通知，其中内容有：健全智能消费品标准，开展智能家电、智能照明电器等标准体系建设，加快智能终端产品的安全性、可靠性、功能性等标准研制。年12月19日，国务院印发《“十三五”国家战略性新兴产业发展规划的通知》，《规划》要求发展人工智能，培育人工智能产业生态，促进人工智能在经济社会重点领域推广应用，打造国际领先的技术体系。
 
 2017年1月16日，中共中央办公厅、国务院办公厅印发了《关于促进移动互联网健康有序发展的意见》，《意见》内容有：实现核心技术系统性突破。坚定不移实施创新驱动发展战略，在科研投入上集中力量办大事，加快移动芯片、移动操作系统、智能传感器、位置服务等核心技术突破和成果转化，推动核心软硬件、开发环境、外接设备等系列标准制定，加紧人工智能、虚拟现实、增强现实、微机电系统等新兴移动互联网关键技术布局，尽快实现部分前沿技术、颠覆性技术在全球率先取得突破。
 
-##3 人工智能的未来 
+3 人工智能的未来
+
 谈及到人工智能，人们大致就分为两个阵营，一是憧憬连连，对科技的未来充满期待，对人工智能能极大限度的提高生活质量和加速经济和工业发展表现出正面积极的态度；而另一方则是对其表示担忧，认为人工智能的发展能远远超乎人类的掌控，甚至能极端地拥有了自主的意识，如同不少电影所描绘的一样，人工智能将统治人类。 但是从目前的发展来看，人工智能不会到达取代人类的地步，现在的人工智能仅仅处于弱人工智能，还没有发展到智能化的地步。而想要达到完全智能化则需要的时间并不是简单的几十年可以完成的。同时人工智能的出现是我们人类自己想要从繁琐的劳动中解放出来，而使用机器以人类的思维模式来为人类工作。
 
 总的来说，人工智能的本质是由人类来操作机器的。至于那种认为机器可以取代人类的说法，先不说我们人脑的复杂性，就说我们所拥有的情感，都不是机器所能达到的。因此在短期内我们更应该思考如何让人工智能成为人类的工具、人类的奴隶，来为社会创造价值，为创业者创造机会。
