--- a/管理科学与工程-赵亚楠- 1605210020.md
+++ b/管理科学与工程-赵亚楠- 1605210020.md
@@ -1,4 +1,4 @@
-人工智能为什么能火起来
+一 人工智能为什么能火起来
 
 1 人工智能简介
      
@@ -32,8 +32,14 @@
 
 2017年1月16日，中共中央办公厅、国务院办公厅印发了《关于促进移动互联网健康有序发展的意见》，《意见》内容有：实现核心技术系统性突破。坚定不移实施创新驱动发展战略，在科研投入上集中力量办大事，加快移动芯片、移动操作系统、智能传感器、位置服务等核心技术突破和成果转化，推动核心软硬件、开发环境、外接设备等系列标准制定，加紧人工智能、虚拟现实、增强现实、微机电系统等新兴移动互联网关键技术布局，尽快实现部分前沿技术、颠覆性技术在全球率先取得突破。
 
-3 人工智能的未来
+二 大数据、云计算与人工智能
 
-谈及到人工智能，人们大致就分为两个阵营，一是憧憬连连，对科技的未来充满期待，对人工智能能极大限度的提高生活质量和加速经济和工业发展表现出正面积极的态度；而另一方则是对其表示担忧，认为人工智能的发展能远远超乎人类的掌控，甚至能极端地拥有了自主的意识，如同不少电影所描绘的一样，人工智能将统治人类。 但是从目前的发展来看，人工智能不会到达取代人类的地步，现在的人工智能仅仅处于弱人工智能，还没有发展到智能化的地步。而想要达到完全智能化则需要的时间并不是简单的几十年可以完成的。同时人工智能的出现是我们人类自己想要从繁琐的劳动中解放出来，而使用机器以人类的思维模式来为人类工作。
+以云计算、大数据、移动互联等为代表的新一代创新技术在全球范围内迅速普及，越来越多的企业采用这些新技术来完成构建自己新一代的IT基础设施架构。万物互联、云、管、端的创新技术发展，无疑成为促进新一代数据中心建设的驱动力。
 
-总的来说，人工智能的本质是由人类来操作机器的。至于那种认为机器可以取代人类的说法，先不说我们人脑的复杂性，就说我们所拥有的情感，都不是机器所能达到的。因此在短期内我们更应该思考如何让人工智能成为人类的工具、人类的奴隶，来为社会创造价值，为创业者创造机会。
+未来主体是传统行业利用互联网技术，在云端用人工智能的方式处理大数据。具体到信息化服务上来讲，未来的信息化服务一定是人工智能、大数据和云计算紧密结合的，是从海量学习数据中自我学习、在日常生活中触手可及的智能化信息服务。
+
+人工智能、大数据以及云计算之间是什么样的关系呢？首先，人工智能的优化或者说自我学习，是需要海量数据的输入用于训练的。就是像一个小学生一样，如果不让他去学习、思考、做作业提高自己的知识水平，他是永远不会考出好成绩的。而大数据的价值挖掘往往又需要人工智能方法，例如图像、音视频、自然语言这些非结构化数据的处理，需要深度学习等人工智能方法。云计算作为IT基础设施，又能支撑了人工智能和大数据这些计算存储密集型任务，让信息化、智能化服务无处不在，触手可及。云计算是人工智能持续迭代进化的重要推手，同时也是获得海量真实大数据的重要方式。可以看到，人工智能、大数据、云计算三者之间已经构成一个相互促进、紧密联系的“铁三角”关系。
+
+三 学习心得
+
+计算机新技术讲座对于经济管理学院的学生来说，无疑是打开了一扇新的窗户。我们可以认识新的名词，了解计算机行业的新动态，这对于身处邮电类学院的学生来说是很有意义的。markdown、gihub等都是以前不曾接触甚至不曾听过的东西，以后可以更方便的去编辑文档，提交作业等等，这都是学习之后的收获。同时，在课堂过程中的交流沟通也使得大家共同进步成长，微信群里大家可以畅所欲言，分享心得，转发的文章也让我们非计算机专业的同学有更多的收获。学习的同时又不失快乐，非常感谢老师带给我们不一样的体会！
