Update 管理科学与工程-童舟-1605210013浅谈我对人工智能我的看法 .md

--- a/管理科学与工程-童舟-1605210013浅谈我对人工智能我的看法 .md
+++ b/管理科学与工程-童舟-1605210013浅谈我对人工智能我的看法 .md
@@ -14,4 +14,4 @@
 
 人工智能是当今最火的词了，每个人都会在未来的生活中得到应用，如果说有一天你看到有人像你打招呼，而他是一个机器人，万一他有了感情那么我就会感到可怕。就像我现在看的美剧《神盾局特工》中最新的剧情就是制造出的艾达（AI机器人）通过黑暗书获得了自己的想法，有了自己感情，产生了自己的私欲，做出了一些反原本默认设置的剧情。虽然这只是美剧的构想，现实中也有很多专家说出不同的观点，认为现在不会到达这样地步。人工智能还是以人工作为主导，可未来谁说的准呢。
 
-总之，人工智能很简单，就是服务我们，让我们变得更有效的处理很多事情。另一方面，我们也会丢失原有的技能，
+总之，人工智能很简单，就是服务我们，让我们变得更有效的处理很多事情。另一方面，我们也会丢失原有的技能，一把双刃剑就看我们能好好利用与否。
